# google-oauth

./: Cargo.toml  README.md  rust-toolchain.toml
src/: client.rs  lib.rs  main.rs  route.rs  scope.rs  secret.rs
src/client/: calendar.rs  misc.rs
src/scope/: serde.rs
