[package]
name = "google-oauth"
version = "0.1.0"
edition = "2021"
default-run = "google-oauth"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.3"
url = { version = "2", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }

futures = "0.3"
tokio = { version = "1.41", features = ["full"] }

tower = { version = "0.5", features = ["util"] }
http = "1.1"
http-body = "1.0"
axum = "0.7"
